force-app/main/default/objects/External_Contract_Shipment_Summary__c/External_Contract_Shipment_Summary__c.object-meta.xml
<CustomObject>
    <label>External Contract Shipment Summary</label>
    <nameField>
        <displayFormat>ECSS-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contract Shipment Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>