force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>External Contract Shipment Summary</relationshipLabel>
    <relationshipName>External_Contract_Shipment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>