force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Charge_Difference__c.field-meta.xml
<CustomField>
    <fullName>Charge_Difference__c</fullName>
    <formula>AND(
NOT(ISBLANK(Invoice__c)),
(Total_Freight_Charges__c        &lt;&gt; Invoice__r.Total_Freight_Charges__c) || 
 (Total_Liability_Charges__c     &lt;&gt; Invoice__r.Total_Liability_Charge__c ) || 
 (Total_Offline_Charges__c       &lt;&gt; Invoice__r.Total_Offline_Charges__c )||
 (Total_BVC_Valuation_Charges__c &lt;&gt; Invoice__r.Total_BVC_Valuation_Charges__c )||
 (Total_Docket_Charges__c        &lt;&gt; Invoice__r.Total_Docket_Charges__c )||
 (Total_Fuel_Charges__c          &lt;&gt; Invoice__r.Total_Fuel_Charges__c )||
 (Total_Holiday_Charges__c       &lt;&gt; Invoice__r.Total_Holiday_Charges__c )||
 (Total_Weight_Charges__c        &lt;&gt; Invoice__r.Total_Weight_Charges__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Difference</label>
    <type>Checkbox</type>
</CustomField>