force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>