force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Contract Shipment Summary</relationshipLabel>
    <relationshipName>External_Contract_Shipment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>