force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/External_Contract__c.field-meta.xml
<CustomField>
    <fullName>External_Contract__c</fullName>
    <label>External Contract</label>
    <referenceTo>External_Contract__c</referenceTo>
    <relationshipLabel>External Contract Shipment Summary</relationshipLabel>
    <relationshipName>External_Contract_Shipment_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>