force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>External Contract Shipment Summary</relationshipLabel>
    <relationshipName>External_Contract_Shipment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>