force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Lock_this_summary__c.field-meta.xml
<CustomField>
    <fullName>Lock_this_summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock this summary</label>
    <type>Checkbox</type>
</CustomField>