force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Origin_Hub__c.field-meta.xml
<CustomField>
    <fullName>Origin_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>External Contract Shipment Summary</relationshipLabel>
    <relationshipName>External_Contract_Shipment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>