force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Shipment_matching_status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_matching_status__c</fullName>
    <formula>IF(
AND(Charge_Difference__c = TRUE,  NOT( ISBLANK(Invoice__c ) ) ), &quot;Not tallied&quot;, 
IF(  AND(Charge_Difference__c = FALSE,  NOT(ISBLANK(Invoice__c ))  ),  &quot;tallied&quot;,  &quot;&quot;  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment matching status</label>
    <type>Text</type>
</CustomField>