force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>Summary_Type__c</fullName>
    <label>Summary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>