force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Total_Fuel_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Fuel_Charges__c</fullName>
    <label>Total Fuel Charges</label>
    <summarizedField>External_Contract_Shipment__c.Fuel_Charges__c</summarizedField>
    <summaryForeignKey>External_Contract_Shipment__c.Shipment_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>