force-app/main/default/objects/External_Contract_Shipment_Summary__c/fields/Total_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipments__c</fullName>
    <label>Total Shipments</label>
    <summaryForeignKey>External_Contract_Shipment__c.Shipment_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>